feat: Update dependencies and project structure
Refactors project dependencies to align with common React/Vite project setups. Updates Vite configuration and TypeScript settings for improved build performance and type checking. Renames project for clarity and updates import maps for CDN usage.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "priyansh-shekhar---product-portfolio",
+  "name": "priyansh-portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,16 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
-    "recharts": "^3.5.1",
-    "d3": "^7.9.0",
-    "react": "^19.2.3",
-    "lucide-react": "^0.561.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "lucide-react": "^0.344.0",
+    "recharts": "^2.12.2",
+    "d3": "^7.8.5"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@types/d3": "^7.4.3",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
